client/src/components/checkout-item/checkout-item.styles.scss
.checkout-item {
    width: 100%;
    min-height: 100px;
    display: flex;
    align-items: center;
    padding: 15px 0;
    font-size: 20px;
    font-weight: bold;
    border-bottom: 1px solid darkgrey;

    .image-container {
        width: 22%;
        padding-right: 15px;

        img {
            width: 100%;
            height: 100%;
            border-radius: 3px;
        }
    }

    .name,
    .quantity,
    .price {
        width: 22%;
    }

    .quantity {
        display: flex;

        .arrow {
            // color: #666;
            color: #aaa;
            cursor: pointer;
            transition: all 0.2s ease;

            &:hover {
                color: rgb(80, 80, 80);
                transform: scale(1.15);
            }
        }

        .value {
            margin: 0 10px;
        }
    }

    .remove-button-container {
        display: flex;
        justify-content: center;
        width: 12%;

        .remove-button {
            position: relative;
            width: 40px;
            height: 40px;
            cursor: pointer;
            padding: 6px;
            color: rgb(201, 36, 36);
            background-color: #f3f3f3;
            font-size: 24px;
            font-weight: bold;
            border-radius: 50%;
            transition: all 0.3s ease;

            .remove-icon {
                position: absolute;
                top: 3px;
                right: 0;
                left: 10px;
                bottom: 0;
            }

            &:hover {
                transform: scale(1.15);
                color: rgb(219, 33, 33);
                background-color: #eee;

                &:active {
                    transition: none;
                    background-color: #ccc;
                }
            }
        }
    }
}

